Fix navbar collapse toggler colour so its visible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,6 +142,7 @@ main {
     padding: 10px;
     float: right;
     margin-right: 45px;
+    color: #000000;
     position: relative;
     top: 50%;
     -ms-transform: translateY(-50%);
